# zotero-cli

./: .gitignore  .infisical.json  .safety-project.ini  CHANGELOG.md  GEMINI-PythonSpecialist.md  GEMINI.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  VALERIUS_AUDIT.md  arXiv_screened.csv  arxiv_sync.csv  config.toml.example  coverage.json  header.csv  integration_converter.md  issue10.md  issue3.md  issue4.md  issue5.md  issue6.md  issue7.md  issue8.md  issue9.md  keys_included_spreadsheet.txt  keys_main_all.txt  keys_main_included.txt  keys_zotero.txt  pyproject.toml  raw_arxiv.txt  recover_screening_state.py  release_notes.md  schema.yaml  sciencedirect_screening.csv  screened_springer.json  screening_arxiv.txt  screening_arxiv_sync.csv  sd_inventory_raw.txt  sd_items.txt  (+21 more)
.gemini_security/: ARCHITECTURAL_ALERT_001.md  ARCHITECTURAL_ALERT_002.md  ARCHITECTURAL_ALERT_003.md
.github/ISSUE_TEMPLATE/: improvement_proposal.md
.github/workflows/: release.yml  tests.yml
.team/: ARCH_MGMT.md  DEV_SQUAD.md  QA_FORCE.md
bibtools/: README.md  pyproject.toml
bibtools/cli/: __init__.py  extract_articles.py  fetch_abstracts.py  main.py  reclassify_zotero_items.py  update_zotero_dois.py
bibtools/core/: __init__.py  article_extractor.py  author_fixer.py  csv_converter.py  models.py  zotero_doi_updater.py  zotero_item_reclassifier.py
bibtools/docs/: ABSTRACT_FETCHING_GUIDE.md  ARCHITECTURE.md  CUSTOM_COMPONENTS.md  DOCUMENTATION_UPDATED.md  QUICK_START.md  USER_GUIDE.md
bibtools/tests/: strategies.py  test_author_fixer.py  test_author_fixer_warnings.py  test_behavioral_equivalence.py  test_cli.py  test_integration.py  test_security.py  test_strategies.py  test_web_interface.py
bibtools/tests/fixtures/: example_usage.py  large_springer.csv  sample_springer.csv
bibtools/utils/: SECURITY_IMPLEMENTATION.md  __init__.py  file_handler.py  security.py
bibtools/web/: README.md  __init__.py  app.py
bibtools/web/static/: script.js  style.css
bibtools/web/templates/: converter.html  error.html  extract_articles.html  index.html
communication/: DEV_INBOX.md  QUALITY_INBOX.md
custom/: QUICK_START.md  README.md  __init__.py  pyproject.toml
custom/cli/: main.py
custom/core/: csv_converter.py  models.py
custom/utils/: __init__.py  file_handler.py
custom/web/: README.md  app.py
custom/web/static/: style.css
data/input/: .gitkeep
data/output/: .gitkeep
data/temp/: .gitkeep
docs/: ARCHITECTURE.md  PROCESS.md  REORG_HINTS.md  REQUIREMENTS.md  SETUP_GUIDE.md  SLR_FEATURES.md  USER_GUIDE.md  USER_STORIES.md  USE_CASES.md
docs/assets/: rag_hydration_flow.mmd
docs/commands/: analyze.md  audit.md  collection.md  decide.md  find-pdf.md  find.md  import.md  info.md  init.md  inspect.md  item.md  list.md  maint.md  rag.md  report.md  review.md  screen.md  search.md  serve.md  slr.md  storage.md  system.md  tag.md
docs/help_specs/: DOC_TEMPLATE.md  collection_backup.md  collection_clean.md  collection_create.md  collection_delete.md  collection_duplicates.md  collection_export.md  collection_list.md  collection_pdf.md  collection_rename.md  import_arxiv.md  import_bdtd.md  import_doi.md  import_file.md  import_manual.md  init.md  item_add.md  item_export.md  item_hydrate.md  item_inspect.md  item_list.md  item_move.md  item_pdf.md  item_purge.md  item_speech.md  item_transfer.md  item_update.md  rag_context.md  rag_ingest.md  rag_model.md  rag_purge.md  rag_query.md  report_attachments.md  report_audit.md  report_duplicates.md  report_pdf.md  report_prisma.md  report_screening.md  report_snapshot.md  report_stats.md  (+35 more)
docs/specs/: RAG_CORE_v1.0.md  RAG_INGEST_v1.0.md  RAG_VERIFICATION_v1.0.md  SDB_EXTRACTION_v1.0.md  SYSTEM_RESTORE_v1.0.md  (+2 more)
export_md/: T364VKT5_evaluation_of_the_maturity_of_llms_in_the_cybersec.md
legacy_scripts/: SearchResults.csv  debug_ris.py  fetch_batch_292_341.py  fetch_batch_342_391.py  fetch_batch_392_432.py  fetch_batch_433_end.py  fetch_next_batch.py  fetch_next_batch_20.py  generate_screening_report.py  list_col.py  process_screening_batch.py  process_screening_batch_267_271.py  process_screening_batch_272_291.py  process_screening_batch_292_341.py  process_screening_batch_342_391.py  process_screening_batch_392_432.py  process_screening_batch_433_end.py  query.txt  test_query.txt
scratch/: debug_sonar_gate.py
scripts/: align_doc_parameters.py  generate_badges.py  prove_fidelity.py  release_wizard.py  test_runner.sh
templates/: extraction_schema.yaml
tests/: conftest.py  test_arxiv_lib.py  test_arxiv_query_parser.py  test_attachment_service.py  test_audit_service.py  test_bibtex_lib.py  test_cli.py  test_client.py  test_collection_service.py  test_config.py  test_core_zotero_item.py  test_duplicate_service.py  test_graph_service.py  test_ieee_csv_lib.py  test_infra_crossref_api.py  test_infra_semantic_scholar.py  test_infra_unpaywall.py  test_infra_zotero_metadata.py  test_infra_zotero_move.py  test_lookup_service.py  test_metadata_aggregator.py  test_migration.py  test_report_service.py  test_ris_lib.py  test_screening_service.py  test_screening_state.py  test_snapshot_service.py  test_springer_csv_lib.py  test_sync_service.py  test_tag_service.py  test_tui.py  test_v2_migration.py  test_zotero_api.py  test_zotero_api_failures.py
tests_custom/: __init__.py  conftest.py  test_author_fixer.py  test_author_fixer_warnings.py  test_behavioral_equivalence.py  test_cli.py  test_fixtures.py  test_integration.py  test_web_interface.py
tmp/: ScienceDirect_citations_1766764784932.ris  ScienceDirect_citations_1766764811834.ris  ScienceDirect_citations_1766764828216.ris  ScienceDirect_citations_1766764887169.ris  ScienceDirect_citations_1766764900263.ris  ScienceDirect_citations_1766764909640.ris  ScienceDirect_citations_1766764918521.ris  ScienceDirect_citations_1766764928621.ris  ScienceDirect_citations_1766764939881.ris  ScienceDirect_citations_1766764950023.bib  ScienceDirect_citations_1766764961568.ris  ScienceDirect_citations_1766764970595.ris  ScienceDirect_citations_1766764979923.bib  ScienceDirect_citations_1766764989964.ris
(+348 files in other folders)
