[project]
name = "zotero-cli"
version = "2.0.0-dev"
description = "Zotero CLI for the Power Researcher: A Systematic Literature Review (SLR) engine with TUI screening, PRISMA automation, and advanced library management."
authors = [{name = "Fábio Chicout", email = "fchicout@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["zotero", "research", "slr", "systematic-review", "prisma", "arxiv", "bibtex", "ris", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities"
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "feedparser",
    "bibtexparser",
    "arxiv",
    "rispy",
    "rich",
    "mermaid-py",
    "tomli; python_version < '3.11'",
    "tenacity"
]

[project.urls]
Repository = "https://github.com/fchicout/zotero-cli"
Issues = "https://github.com/fchicout/zotero-cli/issues"

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov"
]

[project.scripts]
zotero-cli = "zotero_cli.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

where = ["src"]



[tool.pytest.ini_options]

markers = [

    "infra: Infrastructure and documentation consistency tests",

    "integration: End-to-end and integration workflow tests"

]
