[project]
name = "csv2bibtex-custom"
version = "1.0.0"
description = "Standalone CSV to BibTeX converter with automatic author name fixing for Springer exports"
authors = [
    {name = "Evelin Limeira"}
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

# Core dependencies (minimal - uses mostly stdlib)
dependencies = []

[project.optional-dependencies]
# Web interface dependencies
web = [
    "flask>=2.3.0",
]

# Development and testing dependencies
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "bibtexparser>=1.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

# All optional dependencies combined
all = [
    "flask>=2.3.0",
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "bibtexparser>=1.4.0",
]

[project.scripts]
csv2bib-custom = "custom.cli.main:main"
csv2bib-web = "custom.web.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
# Test discovery patterns
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test paths (relative to custom/)
testpaths = ["../tests_custom"]

# Output options
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]

# Markers for categorizing tests
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "property: Property-based tests using Hypothesis",
    "web: Tests for web interface",
    "cli: Tests for command-line interface",
    "slow: Tests that take longer to run"
]
